# models

./: README.md  __init__.py  agglomerative.py  alexnet.py  anova.py  arima_model.py  base.py  catboost_classifier.py  catboost_regressor.py  cca.py  cnn_base.py  collaborative_filtering.py  cox_ph_model.py  dbscan.py  decision_tree_classifier.py  decision_tree_regressor.py  diffusion_model.py  efficientnet.py  elastic_net_regression.py  exponential_smoothing_model.py  factor_analysis.py  faster_rcnn.py  fedavg_model.py  flow_based_model.py  gan_model.py  garch_model.py  gat_classifier.py  gaussian_mixture.py  gaussian_nb_classifier.py  gcn_classifier.py  generative_base.py  glove_model.py  gradient_boosting_classifier.py  gradient_boosting_regressor.py  isolation_forest.py  kmeans.py  knn_classifier.py  label_propagation.py  large_language_model.py  lasso_regression.py  (+51 more)
tests/: README.md  test_anomaly_models.py  test_boosting_models.py  test_cnn_models.py  test_cv_wrappers.py  test_embedding_and_ner.py  test_foundation_models.py  test_generative_models.py  test_graph_models.py  test_meta_learning_models.py  test_models.py  test_multimodal_foundation.py  test_recommender_models.py  test_rl_models.py  test_rnn_models.py  test_semi_supervised_models.py  test_statistical_models.py  test_time_series_models.py  test_transformer_models.py  test_umap_embedding.py  test_yolov5_detector.py
