[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorus-models"
version = "0.0.1"
description = "Collection of machine learning models for Tensorus."
authors = [
    { name = "Tensorus Team" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "numpy",
    "joblib"
]

[tool.setuptools.package-dir]
"tensorus.models" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorus.models*"]
